AOC 2023 day 5 part 1

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,19 @@
     <main.class>Main</main.class>
   </properties>
 
+  <dependencyManagement>
+    <dependencies>
+      <!-- Use the JUnit BOM for version management -->
+      <dependency>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
+        <version>5.10.1</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <dependencies>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
@@ -31,7 +44,6 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>RELEASE</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
